# ConstMicroDistanceSystem

./: .gitignore  CMakeLists.txt
include/Advmot/: AdvMotApi.h  AdvMotDrv.h
include/MVSCamera/: CameraParams.h  MvObsoleteInterfaces.h  PixelType.h
module/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  Group.cpp  Group.h  MotionController.cpp  MotionController.h
src/: ConstMicroDistanceSystem.cpp  ConstMicroDistanceSystem.h  ConstMicroDistanceSystem.ui  main.cpp
tasks/: CamRecorder.cpp  CamRecorder.h  FeedExecutor.cpp  FeedExecutor.h  ImageDetector.cpp  ImageDetector.h  ImageProcessor.cpp  ImageProcessor.h  MotionController.cpp  MotionController.h  ParamsFitter.cpp  ParamsFitter.h
tests/: test_motion.cpp  test_opencv.cpp
utils/: GeometricCalc.cpp  ThreadSafeQueue.h
